codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1261
expression: exec_blob
---
• Waited sleep 1
  └ (no output)
