codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_tool_call_updates_live_status.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                          "
"• Using github.search({"query":"status row"})                                             "
"                                                                                          "
"• Using github.search (0s • esc to interrupt)                                             "
"  └ {"query":"status row"}                                                                "
"                                                                                          "
"                                                                                          "
"› Ask Codex to do anything                                                                "
"                                                                                          "
"  gpt-5.5 default · /tmp/project                                                          "
