codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__orchestration_mode_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Agent Orchestration
  Choose how Codex should split exploration and implementation.

  1. Agentic coding     Full orchestration plus preferred exploration
                        subagents.
  2. Full               Use explorer and worker agents for separable coding
                        work.
  3. Explore            Prefer explorer agents for broad repository discovery.
  4. Work               Prefer worker agents for disjoint implementation
                        scopes.
› 5. Disable (current)  Do not add orchestration guidance.

  Press enter to confirm or esc to go back
