codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select personality
  Choose how Codex should communicate.

  1. Friendly             Warm, collaborative, and explanatory.
› 2. Pragmatic (current)  Concise, direct, and task-focused.

  Press enter to confirm or esc to go back
