codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_context_usage.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  Ready to implement this plan?
  Choose how to leave Plan mode. The approved plan stays available in /work.

› 1. Implement now              Switch to Default mode and start coding.
  2. Start fresh and implement  Fresh thread. Context: 89% used.
  3. Keep planning              Stay in Plan mode with the current thread.

  Press enter to confirm or esc to go back
