codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_ffmpeg_probe_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active
---
• Exploring
  └ Read tweet-video.mp4
    List frames
